--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -157,7 +157,7 @@
 			<%= image_tag('twitter.png') %>
 			<%= image_tag('linkedin.png') %>
 			<%= image_tag('googleplus.png') %>
-			<a href="#"><h6 id="more">More</h6></a>		
+			<h6 id="more">More</h6>
 			<div class="socialmedia-more">
 				<%= link_to image_tag('foursquare.png'), 'https://www.facebook.com/pages/TLC-Dental-Group/703498763013164', :target => "_blank" %>
 				<%= image_tag('pinterest.png') %>
