social media button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -154,15 +154,15 @@
 		<%= link_to image_tag( 'dreamsmiles-btn.png'), 'dreamsmiles', :class => "dreamsmiles-btn" %>
 		<div class="socialmedia">
 			<%= link_to image_tag('facebook.png'), 'https://www.facebook.com/pages/TLC-Dental-Group/703498763013164', :target => "_blank" %>
-			<%= image_tag('twitter.png') %>
-			<%= image_tag('linkedin.png') %>
+			<%= link_to image_tag('twitter.png'), 'https://twitter.com/tlcdentalgroup7', :target => "_blank" %>
+			<%= link_to image_tag('linkedin.png'), 'http://www.linkedin.com/company/rothenberg-dds-tlc-dental-group', :target => "_blank" %>
 			<%= image_tag('googleplus.png') %>
 			<h6 id="more">More</h6>
 			<div class="socialmedia-more">
 				<%= link_to image_tag('foursquare.png'), 'https://www.facebook.com/pages/TLC-Dental-Group/703498763013164', :target => "_blank" %>
 				<%= image_tag('pinterest.png') %>
-				<%= image_tag('tumblr.png') %>
-				<%= image_tag('myspace.png') %>	
+				<%= link_to image_tag('tumblr.png'), 'http://tlcdentalgroup7s.tumblr.com/', :target => "_blank" %>
+				<%= link_to image_tag('myspace.png'), 'https://myspace.com/tlcdentalgroup7s', :target => "_blank" %>	
 			</div>
 		</div>
 	</div>
